# basic_litho_sim

./: .gitignore  AGENTS.md  README.md  activate_venv.bat  agents.md  build_notebooks.bat  conftest.py  jupyterlite.json  pyproject.toml  readme.txt  requirements.txt  setup.py  setup_env.bat
content/: fourier_1d_motivation.ipynb  introduction_logic_viz.py  notebook_fourier_design_and_test.py  notebook_index.py  notebook_introduction.py  notebook_optics.py  notebook_optics_basics.py  notebook_zernikes.py  notebook_zernikes_and_gratings.py  shapes.py  zernikes.py
content/layouts/: notebook_fourier_design_and_test.grid.json
docs/: goodoptics-0.1.0-py3-none-any.whl  goodoptics-wheel.json  index.html  jupyter-lite.json  notebook_introduction.html  notebook_optics_basics.html  notebook_zernikes_and_gratings.html  notebook_zernikes_and_gratings_editable.html
docs/api/contents/: all.json
docs/api/contents/test/: all.json
docs/files/: fourier.py  fourier_1d_motivation.ipynb  lens.ipynb  utils.py
docs/files/test/: test_fourier.py  test_shapes_and_sampling_utils.py
scripts/: build_pages.py
src/goodoptics/: __init__.py  fourier.py  plot.py  shapes.py  utils.py  zernikes.py
src/goodoptics/test/: test_fourier.py  test_pages_build.py  test_shapes_and_sampling_utils.py  test_zernikes.py
tests/: test_build_and_packaging.py  test_fourier.py  test_introduction_logic_viz.py  test_notebooks.py  test_shapes_and_sampling_utils.py  test_utils_and_plot.py  test_zernikes.py
