[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goodoptics"
version = "0.1.0"
description = "Helper library for optics Marimo notebooks"
authors = [{ name = "Steven Berghout" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]